# org-mcp-server

./: .gitignore  .release-plz.toml  CLAUDE.md  Cargo.toml  Makefile  README.md  README.org  flake.nix  justfile  renovate.json
.github/: copilot-instructions.md
.github/workflows/: audit.yml  cd.yml  ci.yml  coverage.yml  release-plz.yml
mcp-server/: CHANGELOG.md  Cargo.toml
mcp-server/src/: core.rs  lib.rs  main.rs
mcp-server/src/resources/: mod.rs  org_file.rs  org_file_list.rs  org_id.rs  resource_tests.rs  utils.rs
mcp-server/src/tools/: integration_tests.rs  mod.rs  org_file_list.rs  test_helpers.rs  tests.rs  tools_tests.rs
mcp-server/tests/: integration_tests.rs
mcp-server/tests/integration_tests/: resources_tests.rs  server_tests.rs  tools_tests.rs
org-cli/: CHANGELOG.md  Cargo.toml
org-cli/src/: config.rs  main.rs
org-cli/src/commands/: agenda.rs  capture.rs  config.rs  element_by_id.rs  heading.rs  init.rs  list.rs  mod.rs  outline.rs  read.rs  search.rs
org-cli/tests/: integration_tests.rs
org-core/: CHANGELOG.md  Cargo.toml
org-core/examples/: headlines.rs  nucleo.rs  orgize_parser-01.rs  refile.org  scheduled.rs  simple.org  walkdir.rs
org-core/src/: config.rs  error.rs  error_tests.rs  lib.rs  org_mode.rs  org_mode_tests.rs  tests.rs  utils.rs
org-core/src/org_mode/: agenda.rs  capture.rs  core.rs  mod.rs  tests.rs  types.rs
org-core/tests/: agenda_tests.rs  basic_use_cases.rs
org-core/tests/common/: mod.rs
org-core/tests/fixtures/: agenda.org  multi_file_b.org  project.org  with_ids.org
org-mcp-server/: CHANGELOG.md  Cargo.toml
org-mcp-server/src/: config.rs  core.rs  lib.rs  main.rs  utils.rs
org-mcp-server/src/resources/: mod.rs  org_agenda.rs  org_file.rs  org_file_list.rs  org_heading.rs  org_id.rs  org_outline.rs
org-mcp-server/src/tools/: mod.rs  org_agenda.rs  org_capture.rs  org_file_list.rs  org_search.rs
org-mcp-server/tests/: integration_tests.rs
org-mcp-server/tests/integration_tests/: resources_tests.rs  server_tests.rs  tools_tests.rs
org-mcp-server/tests/utils/: mod.rs
test-utils/: Cargo.toml
test-utils/fixtures/: agenda.org  basic.org  doc_with_id.org  edge_cases.org  multi_file_a.org  nested.org  notes.org  project.org  research.org  sample.org  search_test.org  simple.org  tagged.org  unicode_test.org  with_doc_id.org  with_tags.org
test-utils/fixtures/archive/: old_notes.org
test-utils/src/: config.rs  dates.rs  fixtures.rs  lib.rs
