[workspace.package]
version = "0.0.7"
edition = "2024"
authors = ["Sebastián Zaffarano <sebastian.zaffarano@elastic.co>"]
license = "MIT"
repository = "https://github.com/szaffarano/org-mcp-server"
documentation = "https://github.com/szaffarano/org-mcp-server"
readme = "README.md"


[workspace]
resolver = "3"
members = ["org-mcp-server", "org-cli", "org-core", "test-utils"]

[workspace.dependencies]
anyhow = "1.0"
assert_cmd = "2.0"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
config = "0.15"
dirs = "6"
globset = "0.4"
ignore = "0.4"
nucleo-matcher = "0.3"
once_cell = "1.21.3"
org-core = { version = "0.0.1", path = "../org-core" }
orgize = { git = "https://github.com/szaffarano/orgize/", rev = "c4b38cb59131b4776e4edd52a1580737acb9df30", features = [
  "tracing",
] }
paste = "1.0"
predicates = "3.1"
regex = "1.11"
rmcp = { version = "0.15.0", features = [
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-server",
  "transport-worker",
  "client",
] }
rowan = "0.16"
serde_json = "1.0.145"
serde = { version = "1.0", features = ["derive"] }
serial_test = "3.2.0"
shellexpand = "3.1.1"
tempfile = "3.23"
temp-env = "0.3.6"
tokio-test = "0.4"
tokio = { version = "1", features = [
  "io-std",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
] }
toml = "1.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = [
  "env-filter",
  "std",
  "fmt",
] }
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
urlencoding = "2.1"

[workspace.metadata.coverage]
exclude = ["*/tests/*", "*/benches/*", "**/target/**"]
