[package]
name = "mcp-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "org-mcp-server"
path = "src/main.rs"

[dependencies]
org-core = { version = "0.1.0", path = "../org-core" }
rmcp = { version = "0.6.3", features = ["server", "macros", "transport-io"] }
tokio = { version = "1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "io-std",
  "signal",
] }
serde_json = "1.0.143"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "std", "fmt"] }
urlencoding = "2.1"
clap = { version = "4.0", features = ["derive"] }
serde = "1.0.223"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.12"
