[[bin]]
name = "org-mcp-server"
path = "src/main.rs"

[dependencies]
org-core = { version = "0.1.0", path = "../org-core" }
rmcp = { version = "0.8.0", features = [
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-server",
  "transport-worker",
  "client",
] }
tokio = { workspace = true, features = [
  "io-std",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "std",
  "fmt",
] }
urlencoding = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }

[package]
name = "mcp-server"
edition = "2024"
authors.workspace = true
license.workspace = true
version.workspace = true
