[dependencies]
org-core = { version = "0.0.1", path = "../org-core" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }

[package]
name = "org-cli"
description = "CLI tool for org-mode file management and testing"
edition = "2024"
authors.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
