[dependencies]
org-core = { version = "0.0.2", path = "../org-core" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
serde_json = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
test-utils = { path = "../test-utils" }

[package]
name = "org-cli"
description = "Command-line tool for searching, reading, and managing org-mode knowledge bases with fuzzy text search and structured content access"
edition = "2024"
authors.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
