[dependencies]
org-core = { version = "0.0.6", path = "../org-core" }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
chrono = { workspace = true }
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shellexpand = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
tempfile = { workspace = true }
test-utils = { path = "../test-utils" }
serial_test = { workspace = true }
temp-env = "0.3.6"

[package]
name = "org-cli"
description = "Command-line tool for searching, reading, and managing org-mode knowledge bases with fuzzy text search and structured content access"
edition = "2024"
authors.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
