[dependencies]
chrono = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
globset = { workspace = true }
ignore = { workspace = true }
nucleo-matcher = { workspace = true }
orgize = { workspace = true, features = ["tracing"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
shellexpand = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["fmt"] }
tempfile = { workspace = true }
serial_test = { workspace = true }
temp-env = "0.3.6"
test-utils = { path = "../test-utils" }

[package]
name = "org-core"
description = "Rust library for org-mode file operations with fuzzy search, outline extraction, ID-based lookups, and heading content retrieval"
edition = "2024"
authors.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
