[dependencies]
chrono.workspace = true
config.workspace = true
dirs.workspace = true
globset.workspace = true
ignore.workspace = true
nucleo-matcher.workspace = true
orgize = { workspace = true, features = ["tracing", "chrono"] }
paste.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
shellexpand.workspace = true
toml.workspace = true
tracing.workspace = true
rowan.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["fmt"] }
tempfile.workspace = true
serial_test.workspace = true
temp-env.workspace = true
test-utils = { path = "../test-utils" }
regex.workspace = true

[package]
name = "org-core"
description = "Rust library for org-mode file operations with fuzzy search, outline extraction, ID-based lookups, and heading content retrieval"
edition = "2024"
authors.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
