[dependencies]
chrono.workspace = true
config.workspace = true
dirs.workspace = true
globset.workspace = true
ignore.workspace = true
nucleo-matcher.workspace = true
orgize = { workspace = true, features = ["tracing", "chrono"] }
pastey.workspace = true
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
shellexpand.workspace = true
toml.workspace = true
rowan.workspace = true
tempfile.workspace = true

[dev-dependencies]
tracing-subscriber = { workspace = true, features = ["fmt"] }
serial_test.workspace = true
temp-env.workspace = true
test-utils = { path = "../test-utils" }
regex.workspace = true

[package]
name = "org-core"
description = "Rust library for org-mode file operations with fuzzy search, outline extraction, ID-based lookups, and heading content retrieval"
edition = "2024"
authors.workspace = true
license.workspace = true
version = "0.2.0"
readme.workspace = true
documentation.workspace = true
repository.workspace = true
