[[bin]]
name = "org-mcp-server"
path = "src/main.rs"

[dependencies]
org-core = { version = "0.0.4", path = "../org-core" }
rmcp = { version = "0.8.0", features = [
  "transport-io",
  "transport-child-process",
  "transport-streamable-http-server",
  "transport-worker",
  "client",
] }
tokio = { workspace = true, features = [
  "io-std",
  "macros",
  "process",
  "rt",
  "rt-multi-thread",
  "signal",
] }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = [
  "env-filter",
  "std",
  "fmt",
] }
urlencoding = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
config = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
test-utils = { path = "../test-utils" }
tokio-test = { workspace = true }
tracing-test = { workspace = true, features = ["no-env-filter"] }
serial_test = { workspace = true }
temp-env = "0.3.6"

[package]
name = "org-mcp-server"
description = "Model Context Protocol (MCP) server providing AI assistants with access to org-mode knowledge bases through search, content retrieval, and ID-based lookups"
edition = "2024"
authors.workspace = true
license.workspace = true
version.workspace = true
readme.workspace = true
documentation.workspace = true
repository.workspace = true
